--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,17 +9,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+ #   - name: Checkout code
+ #     uses: actions/checkout@v2
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+ #   - name: Login to DockerHub
+ #     uses: docker/login-action@v2
+ #     with:
+ #        username: ${{ secrets.DOCKER_USERNAME }}
+ #        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and Push Docker Image
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: harshb/flask-devops-app:latest
+ #    - name: Build and Push Docker Image
+ #     uses: docker/build-push-action@v3
+ #     with:
+ #       push: true
+ #       tags: harshb/flask-devops-app:latest
